--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -9,6 +9,10 @@ body {
   background-color: #f8f8f8;
   font-family: "Montserrat", sans-serif;
 }
+.iconeTabela{
+	font-size: 18px;
+	
+}
 .abracaMenu .menu {
   width: 100%;
 }
