telas periodicidade e tratamento de lixo

--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -41,10 +41,30 @@ body {
   margin: 5px 25px;
   transition: 0.3s ease;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb { 
+  background: #031e3b; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 
 .abracaMenu .menu .item .sub-menu {
   background-color: #04274d;
   display: none;
+      overflow: auto;
+    height: 32vh;
 }
 
 .abracaMenu .menu .item .sub-menu a {
