--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -20,6 +20,13 @@ body {
   position: relative;
   cursor: pointer;
 }
+.tabela-acessar-escolas th {
+	cursor: pointer;
+}
+
+.tabela-acessar-escolas .th-sem-filtro {
+	cursor: default;
+}
 .abracaMenu .menu .item a {
   color: #fff;
   font-size: 16px;
@@ -422,7 +429,7 @@ a {
 }
 
 .abracaMenu p {
-  padding: 5px 25px;
+  padding: 5px 18px;
   font-size: 16px;
   display: flex;
   align-items: center;
@@ -437,7 +444,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 45px;
+  padding-top: 20px;
 }
 .logoSumare {
   width: 90%;
@@ -619,6 +626,38 @@ background-color: #ddd;
   margin-left: 19em;
   margin-right: 10%;
 }
+
+.dropdown-form {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-toggle-form {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content-form {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 250px;
+  padding: 15px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content-left {
+    right: 0;
+    left: auto;
+}
+
+.show {
+  display: block;
+}
+
+
 @media screen and (max-width: 1439px) {
   .container-res {
     margin-left: 17em;
@@ -722,8 +761,6 @@ background-color: #ddd;
     display: none;
   }
 
-  .input-group > .form-control {
-  }
   .form-control {
     min-width: auto !important;
   }
