--- a/WebContet/resources/assets/css/login.css
+++ b/WebContet/resources/assets/css/login.css
@@ -1,13 +1,50 @@
 main{
-	height: 100vh;
+	height: 90vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
+header{
+	width: 100%;
+	height: 10vh;
+	background-color: #183153;
+	display: flex;
+	align-items: center;
+	padding-left: 1%;
+	justify-content: center;
+}
+
 .container-form{
 	height: 50%;
 	width: 50%;
+}
+
+.logo-sumare{
+	width: 15%;
+	cursor: pointer;
+}
+
+.reveal{
+	border: solid 1px #c0c0c0;
+}
+
+.container-btns{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+@media screen and (max-width: 1279px){
+	header {
+		justify-content: center;
+	}
+	
+	.logo-sumare{
+		width: 25%;
+	}
 	
 }
+
