--- a/WebContet/resources/assets/css/login.css
+++ b/WebContet/resources/assets/css/login.css
@@ -1,12 +1,13 @@
-main{
+main {
 	height: 90vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 }
 
-header{
+header {
 	width: 100%;
 	height: 10vh;
 	background-color: #183153;
@@ -16,35 +17,42 @@ header{
 	justify-content: center;
 }
 
-.container-form{
+.container-form {
 	height: 50%;
 	width: 50%;
 }
 
-.logo-sumare{
+.logo-sumare {
 	width: 15%;
 	cursor: pointer;
 }
 
-.reveal{
+.reveal {
 	border: solid 1px #c0c0c0;
 }
 
-.container-btns{
+.container-btns {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
 
-@media screen and (max-width: 1279px){
+.container-section {
+	padding: 2%;
+	width: 100%;
+	height: 90vh;
+}
+
+.card-table {
+	width: 80%
+}
+
+@media screen and (max-width: 1279px) {
 	header {
 		justify-content: center;
 	}
-	
-	.logo-sumare{
+	.logo-sumare {
 		width: 25%;
 	}
-	
 }
-
