--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -375,23 +375,50 @@ body {
   }
 }
 
-.container-info{
-	height: 10vh;
-	width: 100%;
+
+.card-title{
 	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+	flex-direction: row;
 }
 
-.card-info{
-	height: 50%;
-	width: 3%;
-	border-radius: 10em;
-	border: solid 1px #000;
+.info{
+	background-color: #042C57;
+	color: #fff;
+	width: 25px;
+	height: 25px;
+	border-radius: 100%;
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	justify-content: center
+	cursor: pointer;
+	transition: 1000ms;
 }
+
+
+.info .tooltiptext {
+  visibility: hidden;
+  width: 700px;
+  background-color: #042C57;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 1%;
+  position: absolute;
+  z-index: 1;
+  left: 15%;
+  top: 101%;
+  opacity: 0;
+  transition: opacity 0.6s;
+  font-size: .8rem;
+}
+
+.info:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+
 
 
 
@@ -838,6 +865,7 @@ background-color: #ddd;
   stroke-dasharray: 20 300;
   stroke-dashoffset: -32.42;
 }
+
 
 
 @media screen and (min-width: 1279px) {
