--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -18,6 +18,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.card-check{
+	margin-bottom: 1em;
+}
+
 .container-header{
 	width: 100%;
 	background-color: #183153;	
