--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -97,6 +97,69 @@ body {
   width: 5px;
 }
 
+/*Switch Toogle*/
+
+/* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 2.7em;
+  height: 1.5em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  background: #031e3b;
+  border-radius: 50px;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.5em;
+  width: 1.5em;
+  inset: 0;
+  background-color: white;
+  border-radius: 50px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.4);
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.switch input:checked + .slider {
+  background: #9cc9fa;
+}
+
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #9cc9fa;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(1.3em);
+}
+
+.card-form{
+	width: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5%;
+	
+}
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1; 
