--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -101,6 +101,7 @@ body {
 
 /* The switch - the box around the slider */
 .switch {
+  transform: rotate(180deg);
   font-size: 17px;
   position: relative;
   display: inline-block;
@@ -120,7 +121,7 @@ body {
   position: absolute;
   cursor: pointer;
   inset: 0;
-  background: #031e3b;
+    background: #9cc9fa;
   border-radius: 50px;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
@@ -136,12 +137,13 @@ body {
   inset: 0;
   background-color: white;
   border-radius: 50px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.4);
+
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .switch input:checked + .slider {
-  background: #9cc9fa;
+	background: #031e3b;
+
 }
 
 .switch input:focus + .slider {
