--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -119,7 +119,6 @@ body {
 	width: 50%;
 }
 
-
 .buttons__burger {
   --size: 2rem;
   --clr: #fff ;
@@ -206,7 +205,6 @@ body {
   position: absolute;
   cursor: pointer;
   inset: 0;
-
   background: #8B0000 	;
   border-radius: 50px;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -241,16 +239,79 @@ body {
 }
 
 .card-form{
-	width: 50%;
+	width: 45%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	gap: 5%;
-	
 }
 
 .form-label{
 	font-size: .9rem;
+}
+
+.ball-switch{
+margin-left: 5%;
+transform: rotate(180deg);
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 5em;
+  height: 1.5em;
+}
+
+.ball-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.tittle-switch{
+	width: 45%;
+	height: 80%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+}
+
+.title-slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  background: #8B0000;
+  border-radius: 50px;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.title-slider:before{
+	position: absolute;
+  content: "";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.08em;
+  width: 1.08em;
+  inset: 0;
+  background-color: white;
+  border-radius: 50px;
+   border:1px solid #000;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+
+
+.ball-switch input:checked + .title-slider {
+	background: #031e3b;
+
+}
+
+.ball-switch input:focus + .title-slider {
+  box-shadow: 0 0 1px #9cc9fa;;
+}
+
+.ball-switch input:checked + .title-slider:before {
+  transform: translateX(1.7em);
 }
 
 
@@ -1063,6 +1124,7 @@ background-color: #ddd;
   	margin: 2%;
   }
   .card-body{
+  	gap: 2%;
   	width: 70vw;
   }
   .card-table{
