Tela tipo telefone, responsivo e tela menu melhoradas

--- a/WebContet/resources/assets/css/login.css
+++ b/WebContet/resources/assets/css/login.css
@@ -99,6 +99,41 @@ header{
 	}
 }
 
+@media screen and (max-width: 1024px) {
+	.container-form {
+		width: 100%
+	}
+	.container-image{
+		display: none;
+	}
+	.logo-login {
+		width: 30%
+	}
+}
+@media screen and (max-width: 500px) {
+    .container-btns button {
+        font-size: 1rem;
+    }
+    	.title span{
+		font-size: 1rem
+	}
+	.card-body{
+		width: 100%;
+	}
+	.btn{
+		font-size: 1rem;
+		width: 30%;
+		height: 30%;
+	}
+	.card-table{
+		margin-left: 0;
+		justify-content: center;
+	}
+	.logo{
+		width: 50%;
+	}
+}
+
 @media screen and (max-width: 425px) {
 	.logo-sumare {
 		width: 50%;
@@ -114,3 +149,6 @@ header{
 		width: 100%;
 	}
 }
+
+
+
