--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -979,6 +979,32 @@ background-color: #ddd;
 	overflow-y: hidden;
 }
 
+/* Keyframes Entrada*/
+@keyframes entrada {
+	
+	
+	0% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes saida {
+	0% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+
+	100% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+}
 @media screen and (max-width: 1500px) {
 	
 
@@ -1144,6 +1170,16 @@ background-color: #ddd;
 		height: 20%;
 		width: 100vw;
 	}
+	
+	.logoSumare{
+		width: 40%;
+	}
+	
+	
+	
+	.container-icon{
+		display: none;
+	}
 	.logo-sumare-mobile{
 		display: flex;
 	}
@@ -1175,7 +1211,8 @@ background-color: #ddd;
 
 	.container-res{
 		margin: 0;
-		height: 80%
+		height: 80%;
+		width: 90%;
 	}
 	.fa-bars{
 		display: inline;
@@ -1195,7 +1232,7 @@ background-color: #ddd;
   }
   
   .card-table{
-  	width: 90%
+  	width: 100%
   }
   
 }
@@ -1206,17 +1243,29 @@ background-color: #ddd;
 	 display: flex;
   }
   
+  .fa-file-export{
+  display:none;
+  }
+  
+  
+  #limpa-filtros{
+  	display: none;
+  }
+  #exportar-excel{
+  	width: 40%
+  }
   .gap-2{
   	display: flex;
   	flex-direction: row;
   	justify-content:center;
   	width: 100%;
+  	height: 2em;
   	margin: 0;
   	
   }
   
   .gap-2 button{
-  	font-size: .4rem;
+  	font-size: .8rem;
   	
   }
   
@@ -1358,5 +1407,12 @@ background-color: #ddd;
   }
   
   
+  .title span {
+  font-size: .8em;
+}
+
+.mb-3{
+	gap:1%;
+}
   
 }
