--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+.button-status{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
 .err-message{
   	border: 1px solid #FF0000;
 }
