--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -203,7 +203,7 @@ body {
 /* The switch - the box around the slider */
 .switch {
   transform: rotate(180deg);
-  font-size: 17px;
+
   position: relative;
   display: inline-block;
   width: 4em;
@@ -222,9 +222,13 @@ body {
   position: absolute;
   cursor: pointer;
   inset: 0;
-  background: #8B0000 	;
+  background: #8B0000;
   border-radius: 50px;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.slider-certidao{
+  background: #031e3b ;
 }
 
 .slider:before {
@@ -244,7 +248,6 @@ body {
 
 .switch input:checked + .slider {
 	background: #031e3b;
-
 }
 
 .switch input:focus + .slider {
@@ -1142,6 +1145,10 @@ background-color: #ddd;
 }
 
 
+.qualPreencher{
+	display: none;
+}
+
 
 
 
@@ -1266,6 +1273,16 @@ background-color: #ddd;
   	width: 100%
   }
   
+}
+
+@media screen and (max-width:768px){
+	.qualPreencher{
+		display: flex;
+	}
+	
+	.qualPreencherSwitch{
+		display: none;
+	}
 }
 
 @media screen and (max-width: 500px) {
