--- a/WebContet/resources/assets/css/style.css
+++ b/WebContet/resources/assets/css/style.css
@@ -899,7 +899,7 @@ a {
 }
 
 .img-menu {
-	background-color: #fff;
+	
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -908,7 +908,11 @@ a {
 }
 
 .logoSumare {
-	width: 60%;
+	width: 90%;
+    background: #fff;
+    border-radius: 25px;
+    padding: 10px 20px;
+    box-shadow: 0px 7px 10px 1px #171717;
 }
 
 .close-btn-menu {
