Enviando validacao de autorizacao do usuario

--- a/WebContent/resources/assets/css/style.css
+++ b/WebContent/resources/assets/css/style.css
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 }
 
+.box-edit-val{
+	cursor: pointer;
+}
+
 /* Transição suave para o accordion */
 .accordion-collapse {
     transition: height 1000ms ease-in-out; /* Define a transição suave */
