--- a/WebContent/resources/assets/css/style.css
+++ b/WebContent/resources/assets/css/style.css
@@ -8,6 +8,10 @@
 	cursor: pointer;
 }
 
+.hidden-row {
+            display: none;
+        }
+
 /* Transição suave para o accordion */
 .accordion-collapse {
     transition: height 1000ms ease-in-out; /* Define a transição suave */
@@ -199,7 +203,6 @@ th, tr {
 }
 
 body {
-	min-height: 100vh;
 	width: 100%;
 	background-color: #f8f8f8;
 	font-family: "Montserrat", sans-serif;
