--- a/WebContent/resources/assets/css/style.css
+++ b/WebContent/resources/assets/css/style.css
@@ -15,6 +15,11 @@ body{
 .hidden-row {
             display: none;
         }
+        
+        
+.title {
+    font-weight: bold;
+}
 
 /* Transição suave para o accordion */
 .accordion-collapse {
