--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                    
+                                                        
+    
     
     
     
@@ -12,7 +13,8 @@
     
     
     <wb-module deploy-name="front-educacional-caxias-1.0.0">
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -25,7 +27,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -38,7 +41,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/WebContet"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -51,7 +55,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -64,11 +69,15 @@
         
         
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                                                                                                                
+        
         
         
         
@@ -81,7 +90,8 @@
         
         
         <property name="java-output-path" value="/wesell/build/classes"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -89,7 +99,8 @@
         
         
         <property name="context-root" value="front-educacional-caxias"/>
-                                                                                                    
+                                                                                                            
+    
     
     
     
@@ -102,7 +113,8 @@
     
     
     </wb-module>
-                                                
+                                                    
+
 
 
 
