--- a/WebContent/resources/assets/css/login.css
+++ b/WebContent/resources/assets/css/login.css
@@ -62,7 +62,7 @@ form{
 	width: 90%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: start;
 }
 
 header{
@@ -73,6 +73,7 @@ header{
 	align-items: center;
 	background-color: #031E3B;
 }
+
 .container-section {
 	padding: 2%;
 	width: 100%;
@@ -87,6 +88,61 @@ header{
 	display: flex;
 	flex-direction: row;
 	gap: 1%; 
+}
+
+
+
+.form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color:  #fff;
+  width: 80%;
+  padding: 2%;
+  border-radius: 12px;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+  color: black
+}
+
+.message {
+  color: #a3a3a3;
+  font-size: 14px;
+  margin-top: 4px;
+  text-align: center
+}
+
+.inputs {
+  margin-top: 10px
+}
+
+.inputs input {
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  border: none;
+  border-bottom: 1.5px solid #d2d2d2;
+  margin: 0 10px;
+}
+
+.inputs input:focus {
+  border-bottom: 1.5px solid royalblue;
+  outline: none;
+}
+
+.action {
+  margin-top: 24px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: none;
+  background-color: royalblue;
+  color: white;
+  cursor: pointer;
+  align-self: end;
 }
 
 
