--- a/WebContent/resources/assets/css/style.css
+++ b/WebContent/resources/assets/css/style.css
@@ -1202,6 +1202,15 @@ a {
   margin-right: 5px;
 }
 
+#prevB a,
+#nextB a {
+  pointer-events: none;
+}
+#prevB,
+#nextB {
+  cursor: pointer;
+}
+
 .active-page {
   background-color: #ddd;
 }
