--- a/WebContent/resources/assets/css/style.css
+++ b/WebContent/resources/assets/css/style.css
@@ -74,6 +74,46 @@ tr {
   text-overflow: ellipsis;
 }
 
+.search-container {
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+ 
+#searchInput {
+    width:85%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.anexo-card {
+    width: 150px;
+    height: 150px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: 1000ms;
+}
+
+.anexo-card:hover {
+    background-color: #eef2f7;
+    border-color: #007bff;
+}
+
+.anexo-card i {
+    font-size: 32px;
+}
+
+
 #prevFicha,
 #nextFicha,
 .btn-page {
